src/test/resources/semantic_errors/int_LT_string.notc
void main() {
    string s = "";
    if (3 < s) {
        return;
    }
}
